--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 <head>
+  <link href="style.css" rel="stylesheet">
 <title>VasileRO2</title>
 </head>
 <body>
 <center text>
-<body bgcolor=darkred>
+<div class="container">
 <font color=white>
 <h1> Im Vasile And Im sometimes silly</h1>
 <font size=50>
